<resources>
    <string name="app_name">Aston_5_Easy</string>
    <string name="contact_details">Contact details:</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_lastname">Enter lastname</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="save">save</string>
    <string name="tv_name_text">Name:</string>
    <string name="tv_lastname_text">Lastname:</string>
    <string name="tv_phone_number_text">Phone number:</string>
    <string name="empty">Empty</string>
</resources>