<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ContactDetailsFragment">

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_details"
        android:textSize="@dimen/tv_details_text_size" />

    <TextView
        android:id="@+id/tvContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:text="@string/name"
        android:textSize="@dimen/text_size_30sp" />

    <TextView
        android:id="@+id/tvContactLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/lastname"
        android:textSize="@dimen/text_size_30sp" />

    <TextView
        android:id="@+id/tvContactPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/phone_number"
        android:textSize="@dimen/text_size_30sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/etEditLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_lastname"
            android:inputType="textPersonName"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/etEditPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:textAlignment="textStart" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</androidx.appcompat.widget.LinearLayoutCompat>