<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ContactsListFragment">

    <!--    FIRST CONTACT CARD-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_double"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/tv_name_text"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/tv_lastname_text"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/tv_phone_number_text"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastname" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guideline_begin" />

            <TextView
                android:id="@+id/tvNamePlaceholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLastnamePlaceholder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@id/tvLastname" />

            <TextView
                android:id="@+id/tvPhoneNumberPlaceHolder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@id/tvPhoneNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <!--    SECOND CONTACT CARD-->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_double"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/tvNameSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/tv_name_text"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLastnameSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/tv_lastname_text"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNameSecond" />

            <TextView
                android:id="@+id/tvPhoneNumberSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/tv_phone_number_text"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastnameSecond" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guideline_begin" />

            <TextView
                android:id="@+id/tvNamePlaceholderSecond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineSecond"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLastnamePlaceholderSecond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineSecond"
                app:layout_constraintTop_toTopOf="@id/tvLastnameSecond" />

            <TextView
                android:id="@+id/tvPhoneNumberPlaceholderSecond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineSecond"
                app:layout_constraintTop_toTopOf="@id/tvPhoneNumberSecond" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvThird"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_double"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/tvNameThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_double"
                android:text="@string/tv_name_text"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLastnameThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/tv_lastname_text"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNameThird" />

            <TextView
                android:id="@+id/tvPhoneNumberThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/phone_number"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLastnameThird" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guideline_begin" />

            <TextView
                android:id="@+id/tvNamePlaceholderThird"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineThird"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLastnamePlaceholderThird"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineThird"
                app:layout_constraintTop_toTopOf="@id/tvLastnameThird" />

            <TextView
                android:id="@+id/tvPhoneNumberPlaceholderThird"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineThird"
                app:layout_constraintTop_toTopOf="@id/tvPhoneNumberThird" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>